<resources>
    <string name="app_name">Who Wants To Be A Millionaire</string>
    <string name="enter_btn">Press here to enter</string>
    <string name="login_btn">Login</string>
    <string name="registration_btn">Registration</string>
    <string name="edit_txt_username">Enter username</string>
    <string name="edit_txt_password">Enter Password</string>
    <string name="edit_txt_repassword">Re-Enter password</string>
    <string name="edit_txt_email">Enter EMAIL</string>
    <string name="edit_txt_phone">Enter phone number</string>
    <string name="text_view_category">Choose Category</string>
    <string name="text_view_category_choosen">Category</string>
    <string name="start_btn">Start</string>
    <string name="text_view_question_numberרק">Question #</string>
    <string name="login_success">Login Successfully</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="enter_username">Enter username</string>
    <string name="user_not_exist">User is not exist</string>
    <string name="back">Back</string>
    <string name="user_exists">User already exists</string>
    <string name="registration_complete">Registration Complete</string>
    <string name="unmatch_passwords">Password doesn\'t match , try again</string>
    <string name="not_valid_mail">Email is not vaild</string>
    <string name="phone_digits">Phone number must contains 10 digits</string>
    <string name="try_again_btn">Try Again</string>
    <string name="score_text_view">Score:</string>
    <string name="passed_text_view">Passed:</string>
    <string name="registration_inputs">Please fill all inputs</string>
    <string name="cat_sport">Category: Sport</string>
    <string name="cat_flags">Category: Flags</string>
    <string name="cat_heroes">Category: Heroes</string>
    <string name="user_settings_text_view">User Settings</string>
    <string name="save_toast">Saving...</string>
    <string name="leaderboard_name">Name</string>
    <string name="leaderboard_score">Score</string>
    <string name="send_feedback_textview">Send Feedback</string>
    <string name="send_email_btn">Send Email</string>
    <string name="rules_btn">Rules</string>
    <string name="logut_txt">Logout</string>
    <string name="sortby_key">Sort By</string>
    <string name="sort_score">Score</string>
    <string name="sort_name">Name</string>
</resources>
