<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/formLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:background="@mipmap/contactimage"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOrange"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/send_feedback_textview"
            android:textSize="40sp" />





            <Button
                android:id="@+id/email_btn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="20dp"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:paddingStart="10dp"
                android:text="@string/send_email_btn"
                android:textSize="20sp"
                android:background="@drawable/enter_button" />


            <Button
                android:id="@+id/rules_btn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:drawableLeft="@drawable/ic_help_black_24dp"
                android:paddingStart="10dp"
                android:text="@string/rules_btn"
                android:background="@drawable/enter_button"
                android:textSize="20sp" />


        </LinearLayout>
